@@ -2,9 +2,19 @@ package XML::Grammar::Screenplay::ToDocBook;
 
 use MooX 'late';
 
-extends('XML::Grammar::Screenplay::XSLT::Base');
+use XML::GrammarBase::Role::RelaxNG;
+use XML::GrammarBase::Role::XSLT;
 
-has '+xslt_transform_basename' => (default => "screenplay-xml-to-docbook.xslt");
+with ('XML::GrammarBase::Role::RelaxNG');
+with XSLT(output_format => 'docbook');
+
+has '+module_base' => (default => 'XML-Grammar-Fiction');
+has '+rng_schema_basename' => (default => 'screenplay-xml.rng');
+
+has '+to_docbook_xslt_transform_basename' =>
+(
+    default => 'screenplay-xml-to-docbook.xslt',
+);
 
 =head1 NAME
 
@@ -51,7 +61,9 @@ sub translate_to_docbook
 {
     my ($self, $args) = @_;
 
-    return $self->perform_translation($args);
+    return $self->perform_xslt_translation(
+        {output_format => 'docbook', %{$args}}
+    );
 }
 
 1;
